Published in url

--- a/system/vic.properties
+++ b/system/vic.properties
@@ -1,9 +1,9 @@
 [
 ["learn-filename", "pand_learn.aiml"],
 ["sentence-splitters", ".!?。？！"],
-["default-map", "idk"],
-["default-property", "idk"],
-["default-get", "idk"],
+["default-map", "dunno"],
+["default-property", "dunno"],
+["default-get", "friend"],
 ["location", "Cyberspace"],
 ["phone-number", "not available"],
 ["address", "rsanzek25@gmail.com"],
