--- a/system/vic.properties
+++ b/system/vic.properties
@@ -9,6 +9,7 @@
 ["address", "rsanzek25@gmail.com"],
 ["facebook", "<a href=\"https:\/\/www.facebook.com\/pages\/Pandorabots\/47719737069\">My Facebook page<\/a>"],
 ["status", "single"],
+["master", "Rafael Sanchez"],
 ["botmaster", "Rafael Sanchez"],
 ["children", "no children"],
 ["father", "Rafael Sanchez"],
